<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/new_product">

    <fragment
        android:id="@+id/new_product"
        android:name="com.pw3.emporiodosorganicos.ui.newProduct.NewProductFragment"
        android:label="@string/title_new_product"
        tools:layout="@layout/fragment_new_product" />

    <fragment
        android:id="@+id/all_products"
        android:name="com.pw3.emporiodosorganicos.ui.allProducts.AllProductsFragment"
        android:label="@string/title_all_products"
        tools:layout="@layout/fragment_all_products">
        <action
            android:id="@+id/action_dashboard_to_editProductFragment"
            app:destination="@id/edit_productFragment" />
    </fragment>

    <fragment
        android:id="@+id/about"
        android:name="com.pw3.emporiodosorganicos.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/edit_productFragment"
        android:name="com.pw3.emporiodosorganicos.ui.editProduct.EditProductFragment"
        android:label="@string/title_edit_product"
        tools:layout="@layout/fragment_new_product">
        <argument
            android:name="productId"
            android:defaultValue="0"
            app:argType="integer" />
    </fragment>

    <action
        android:id="@+id/action_global_about"
        app:destination="@id/about" />

</navigation>